versions/v1.3/modules/en/pages/installation-setup/airgap.adoc
= Air-Gapped Environment

This section describes how to use {harvester-product-name} in an air-gapped environment. Some use cases could be where {harvester-product-name} will be installed offline, behind a firewall, or behind a proxy.

The ISO image contains all the packages to make it work in an air gapped environment.

== Working Behind an HTTP Proxy

In some environments, the connection to external services, from the servers or VMs, requires an HTTP(S) proxy.

=== Configure an HTTP Proxy During Installation

You can configure the HTTP(S) proxy during the xref:../installation-setup/methods/iso-install.adoc[ISO installation] as shown in picture below:

image::install/iso-proxy.png[iso-proxy]

=== Configure an HTTP Proxy

You can configure the HTTP(S) proxy using the UI.

. Go to the settings page of the UI.
. Find the `http-proxy` setting, click *⋮ > Edit setting*
. Enter the value(s) for `http-proxy`, `https-proxy` and `no-proxy`.

image::proxy-setting.png[proxy-setting]

[NOTE]
====
{harvester-product-name} appends necessary addresses to user configured `no-proxy` to ensure the internal traffic works.
i.e., `localhost,127.0.0.1,0.0.0.0,10.0.0.0/8,longhorn-system,cattle-system,cattle-system.svc,harvester-system,.svc,.cluster.local`. `harvester-system` was added into the list since v1.1.2.

When the nodes in the cluster do not use a proxy to communicate with each other, the CIDR needs to be added to `http-proxy.noProxy` after the first node is installed successfully. Please refer to xref:../troubleshooting/cluster.adoc#_fail_to_deploy_a_multi_node_cluster_due_to_incorrect_http_proxy_setting[fail to deploy a multi-node cluster].
====

== Guest Cluster Images

All necessary images to install and run {harvester-product-name} are conveniently packaged into the ISO, eliminating the need to pre-load images on bare-metal nodes. A {harvester-product-name} cluster manages them independently and effectively behind the scenes.

However, it's essential to understand a guest Kubernetes cluster (for example, a {rke2-product-name} cluster) created by the xref:../integrations/rancher/node-driver/node-driver.adoc[Harvester Node Driver] is a distinct entity from a {harvester-product-name} cluster. A guest cluster operates within VMs and requires pulling images either from the internet or a https://documentation.suse.com/cloudnative/rancher-manager/v2.9/en/rancher-admin/global-configuration/global-default-private-registry.html#_configure_a_private_registry_with_credentials_when_creating_a_cluster[private registry].

If the *Cloud Provider* option is configured to {harvester-product-name} in a guest Kubernetes cluster, it deploys the Harvester Cloud Provider and Container Storage Interface (CSI) driver.

image::cluster-registry.png[cluster-registry]

As a result, we recommend monitoring each RKE2 release in your air-gapped environment and pulling the required images into your private registry. Please refer to the https://www.suse.com/suse-harvester/support-matrix/all-supported-versions/[Support Matrix] for the best Harvester Cloud Provider and CSI driver capability support.

== Integrate with an External {rancher-short-name}

{rancher-short-name} determines the `rancher-agent` image to be used whenever a {harvester-product-name} cluster is imported. If the image is not included in the {harvester-product-name} ISO, it must be pulled from the internet and loaded on each node, or pushed to the {harvester-product-name} cluster's registry.

[,bash]
----
# Run the following commands on a computer that can access both the internet and the {harvester-product-name} cluster.
docker pull rancher/rancher-agent:<version>
docker save rancher/rancher-agent:<version> -o rancher-agent-<version>.tar

# Copy the image TAR file to the air-gapped environment.
scp rancher-agent-<version>.tar rancher@<harvester-node-ip>:/tmp

# Use SSH to connect to the {harvester-product-name} node, and then load the image.
ssh rancher@<harvester-node-ip>
sudo -i
docker load -i /tmp/rancher-agent-<version>.tar
----

== Harvester UI Extension with {rancher-short-name} Integration

The Harvester UI Extension is required to access the {harvester-product-name} UI in {rancher-short-name} v2.10.x and later versions. However, installing the extension over the network is not possible in air-gapped environments, so you must perform the following workaround:

. Pull the image https://hub.docker.com/r/rancher/ui-plugin-catalog/tags[rancher/ui-plugin-catalog] with the newest tag.

. On the {rancher-short-name} UI, go to *Extensions*, and then select *⋮ -> Manage Extension Catalogs*.
+
image::air-gapped/air-gappted-harvester-ui-extension-01.png[Rancher UI - Manage Extension Catalogs]

. Specify the required information.
+
image::air-gapped/air-gappted-harvester-ui-extension-02.png[Rancher UI - Import Extension Catalog]
+
* *Catalog Image Reference*: Specify the private registry URL and image repository.
* *Image Pull Secrets*: Specify the secret used to access the registry when a username and password are required. You must create that secret in the `cattle-ui-plugin-system` namespace. Use either `kubernetes.io/dockercfg` or `kubernetes.io/dockerconfigjson` as the value of `type`.
+
Example:
+
[,yaml]
----
apiVersion: v1
kind: Secret
metadata:
  name: my-registry-secret-rancher
  namespace: cattle-ui-plugin-system
type: kubernetes.io/dockerconfigjson
data:
  .dockerconfigjson: {base64 encoded data}
----

. Click *Load*, and then allow some time for the extension to be loaded.
+
image::air-gapped/air-gappted-harvester-ui-extension-03.png[Rancher UI - Extension Catalogs]

. On the *Available* tab, locate the extension named *Harvester*, and then click *Install*.
+
image::air-gapped/air-gappted-harvester-ui-extension-04.png[Rancher UI - Available Extensions]

. Select the version that matches the {harvester-product-name} cluster, and then click *Install*.
+
For more information, see the xref:../integrations/rancher/harvester-ui-extension.adoc#_support_matrix[Harvester UI Extension Support Matrix].
+
image::air-gapped/air-gappted-harvester-ui-extension-05.png[Rancher UI - Select Harvester UI Extension Version]
+
image::air-gapped/air-gappted-harvester-ui-extension-06.png[Rancher UI - Harvester UI Extension Installed]

. Go to *Virtualization Management -> Harvester Clusters*.
+
You can now import {harvester-product-name} clusters and access the {harvester-product-name} UI.
+
image::air-gapped/air-gappted-harvester-ui-extension-07.png[Rancher UI - Harvester Clusters]

== Troubleshooting

=== UI Extensions Do Not Appear

If the *Extensions* screen is empty, go to *Repositories* (*⋮ -> Manage Repositories*) and then click *Refresh*.

image::air-gapped/air-gappted-harvester-ui-extension-04-01.png[Rancher UI - Manage Repositories]

image::air-gapped/air-gappted-harvester-ui-extension-04-02.png[Rancher UI - Connection Refused Error]

image::air-gapped/air-gappted-harvester-ui-extension-04-03.png[Rancher UI - Refresh Repositories Screen]

image::air-gapped/air-gappted-harvester-ui-extension-04-04.png[Rancher UI - Repositories]

=== Installation Failed

If you encounter an error during installation, check the `uiplugins` resource.

image::air-gapped/air-gappted-harvester-ui-extension-05-01.png[Rancher UI - Harvester UI Extension Installation Error]

Example:

[,shell]
----
bash-4.4# k get uiplugins -A
NAMESPACE                 NAME        PLUGIN NAME   VERSION   STATE
cattle-ui-plugin-system   harvester   harvester     1.0.3     pending
bash-4.4# k get uiplugins harvester --namespace cattle-ui-plugin-system -o yaml
apiVersion: catalog.cattle.io/v1
kind: UIPlugin
metadata:
  # skip
  name: harvester
  namespace: cattle-ui-plugin-system
spec:
  plugin:
    endpoint: http://ui-plugin-catalog-svc.cattle-ui-plugin-system:8080/plugin/harvester-1.0.3
----

Ensure that `svc.namespace` is accessible from {rancher-short-name}. If that endpoint is not accessible, you can directly use a cluster IP such as `10.43.33.58:8080/plugin/harvester-1.0.3`.